src/components/Analytics/Analytics.less
@import "@/styles/variables.less";

.analytics-section {
  display: flex;
  flex-direction: column;
  gap: 48px;

  &__header {
    display: flex;
    align-items: center;
    justify-content: space-between;

    &-content {
      display: flex;
      flex-direction: column;
      gap: 8px;

      &-title {
        font-size: 24px;
        font-weight: bold;
        margin: 0;
        color: @primary-color;
      }

      &-description {
        margin: 0;
        color: @text-gray;
      }
    }

    &-icon {
      width: 120px;
      height: 60px;
      object-fit: contain;
    }
  }

  &__currency {
    background: linear-gradient(
      135deg,
      rgba(@light-purple, 0.102),
      rgba(@light-purple, 0.2)
    );
    color: @light-purple;
    border: 1px solid rgba(@light-purple, 0.302);
    padding: 4px 8px;
    border-radius: 12px;
    display: flex;
    align-items: center;
    gap: 4px;
    width: fit-content;

    &-icon {
      width: 16px;
      height: 16px;
    }
  }

  &__date {
    display: flex;
    flex-direction: column;
    gap: 4px;

    &-day {
      color: @text-color;
    }

    &-time {
      color: @text-gray;
      font-size: 14px;
    }
  }

  &__status {
    display: flex;
    align-items: center;
    gap: 8px;
    width: fit-content;
    padding: 4px 8px;
    border-radius: 12px;

    &--paid {
      background: linear-gradient(135deg, #dbfae6, #c9f8da);
      color: @success-color;
      border: 1px solid @success-light;
    }

    &--unpaid {
      background: linear-gradient(
        135deg,
        rgba(@red-color, 0.102),
        rgba(@red-color, 0.2)
      );
      color: @red-color;
      border: 1px solid rgba(@red-color, 0.302);
    }

    &-icon {
      width: 12px;
      height: 12px;

      &.paid {
        color: @success-color;
      }

      &.unpaid {
        color: @red-color;
      }
    }
  }

  &__table-header {
    display: flex;
    flex-direction: column;
    gap: 4px;

    &-icon {
      display: flex;
      align-items: center;
      gap: 4px;
      white-space: nowrap;

      svg {
        width: 16px;
        height: 16px;
        stroke: @primary-color;
      }
    }

    h2 {
      margin: 0;
      font-weight: bold;
      font-size: 16px;
      text-transform: capitalize;
      color: @primary-color;
    }

    p {
      color: @text-gray;
      font-size: 14px;
      margin: 0;
    }
  }
}

